# aws-cdk-ts

./: README.md  package-lock.json  package.json  pyproject.toml
cdk-sample/: cdk.json  package-lock.json  package.json
cdk-sample/lib/: cdk-sample-stack.ts
