[tool.poetry]
name = "aws-cdk-ts"
version = "0.1.0"
description = ""
authors = ["piyota0901 <piyo.tatsu.0901@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
awscli-local = "^0.20"
localstack = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
